--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/zairobastos/ApitoFinal-Server#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.20.0",
+    "prisma": "^4.1.1"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
+    "@types/cors": "^2.8.12",
     "@types/nodemon": "^1.19.2",
     "express": "^4.18.1",
     "ts-node": "^10.9.1",
