--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   },
   "homepage": "https://github.com/zairobastos/ApitoFinal-Server#readme",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.5",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
+    "nodemailer": "^6.7.7",
     "prisma": "^4.1.1"
   },
   "dependencies": {
