--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "eslint": "^8.20.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.7",
     "prisma": "^4.1.1"
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
     "@types/cors": "^2.8.12",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/nodemon": "^1.19.2",
     "express": "^4.18.1",
     "ts-node": "^10.9.1",
